--- a/face_register.html
+++ b/face_register.html
@@ -507,7 +507,8 @@
 					<button id="retakeBtn" class="ctrl-btn">Retake Last</button>
 				</div>
 				<button id="restartBtn" class="ctrl-btn">Restart</button>
-				<button id="cancelBtn" class="ctrl-btn">Cancel</button>
+                                <button id="downloadBtn" class="ctrl-btn" style="display:none;">Download</button>
+                                <button id="cancelBtn" class="ctrl-btn">Cancel</button>
 			</div>
                 <div id="capturePreview"></div>
                 </div>
