--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="apple-touch-icon" href="icons/icon-192.png">
+		
+		<style>
+			html, body{
+				margin: 0px;
+				padding: 0px;
+			}
+		</style>
 	</head>
 	<body>
 		<!-- Minimal inline CSS to center content and style links as buttons -->
